# catkin_grpc_examples

./: README.md
greeter/: CMakeLists.txt  package.xml  setup.py
greeter/proto/: hello.proto
greeter/proto/subdir/: hello_msgs.proto
greeter/scripts/: greeter_py_client  greeter_py_self  greeter_py_server
greeter/src/: greeter_cc_client.cc  greeter_cc_self.cc  greeter_cc_server.cc
greeter/src/greeter/: greeter_py_client.py  greeter_py_self.py  greeter_py_server.py
